@@ -65,6 +65,10 @@
             <groupId>org.crac</groupId>
             <artifactId>crac</artifactId>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.lambda</groupId>
+            <artifactId>powertools-common</artifactId>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
@@ -107,6 +111,24 @@
 
     <profiles>
         <profile>
+            <id>generate-classesloaded-file</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>
+                                -Xlog:class+load=info:classesloaded.txt
+                                --add-opens java.base/java.util=ALL-UNNAMED
+                                --add-opens java.base/java.lang=ALL-UNNAMED
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>generate-graalvm-files</id>
             <!-- The AWS DynamoDBClient uses com.amazonaws.xray.interceptors.TracingInterceptor if available on the
             classpath. If the DynamoDB persistence store is used together with tracing, this would fail in GraalVM 
@@ -116,6 +138,11 @@
                 <dependency>
                     <groupId>com.amazonaws</groupId>
                     <artifactId>aws-xray-recorder-sdk-aws-sdk-v2-instrumentor</artifactId>
+                    <scope>test</scope>
+                </dependency>
+                <dependency>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-subclass</artifactId>
                     <scope>test</scope>
                 </dependency>
             </dependencies>
@@ -138,6 +165,13 @@
         </profile>
         <profile>
             <id>graalvm-native</id>
+            <dependencies>
+                <dependency>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-subclass</artifactId>
+                    <scope>test</scope>
+                </dependency>
+            </dependencies>
             <build>
                 <plugins>
                     <plugin>
